[metadata]
description = Extensible task queue used in DVC.
name = dvc-task
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/dvc-task
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 1 - Planning

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    celery>=5.2.0,<6
    kombu>=5.2.0,<6
    funcy>=1.17
    shortuuid>=1.0.8
    pywin32>=225; sys_platform == 'win32'

[options.extras_require]
docs =
    mkdocs==1.3.1
    mkdocs-gen-files==0.3.5
    mkdocs-material==8.4.1
    mkdocs-section-index==0.3.4
    mkdocstrings-python==0.7.1
tests =
    pytest==7.1.2
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.14.5
    mypy==0.971
    flaky==3.7.0
    pytest-test-utils>=0.0.6
    pytest-celery
    celery-types>=0.11.0
dev =
    %(tests)s
    %(docs)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
